--- a/Test02/Views/PhongKho/CreateCTKho.cshtml
+++ b/Test02/Views/PhongKho/CreateCTKho.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Tạo chi tiết kho";
     ViewBag.qlk = "active";
+    
 }
 
 <h3>Tạo chi tiết kho của kho @Session["makho1"]</h3>
@@ -17,7 +18,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.MaCTKho)
     @Html.HiddenFor(model => model.MaKho)
-    
+
     <div class="form-group">
         @Html.LabelFor(model => model.MaSP, "MaSP", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -49,13 +50,21 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TinhTrang, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TinhTrang, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TinhTrang, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @*<div class="form-group">
+            @Html.LabelFor(model => model.TinhTrang, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TinhTrang, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TinhTrang, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+    @*if(item.SoLuong <= 100 && item.SoLuong > 0)
+    {
+    item.TinhTrang = "Sắp hết hàng";
+    }
+    else if(item.SoLuong > 100)
+    {
+    item.TinhTrang = "Còn hàng";
+    }*@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
