--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -16,13 +16,6 @@
             <div class="tile-body">
                 <div class="row element-button">
                     <div class="col-sm-2">
-                        <a class="btn btn-add btn-sm" href="ThemSanPham" title="Thêm">
-                            <i class="fas fa-plus"></i>
-                            Tạo phiếu đề nghị nhập hàng hóa
-                        </a>
-                    </div>
-
-                    <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
                         </a>
@@ -33,8 +26,8 @@
                     </div>
 
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm pdf-file" type="button" title="In" onclick="myFunction(this)">
-                            <i class="fas fa-file-pdf"></i> Xuất PDF
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
                         </a>
                     </div>
 
@@ -44,7 +37,7 @@
                         </a>
                     </div>
                 </div>
-                <h3 class="tile-title">DANH SÁCH SẢN PHẨM</h3>
+                <h3 class="tile-title" id="sample1" style="text-align:center">DANH SÁCH SẢN PHẨM</h3>
                 <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                        id="sampleTable">
                     <thead>
@@ -90,10 +83,16 @@
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-            <div>
-                <h3 class="tile-title">SẢN PHẨM SẮP HẾT HÀNG</h3>
-            </div>
             <div class="tile-body">
+                <div class="row element-button">
+                    <div class="col-sm-2">
+                        <a class="btn btn-add btn-sm" href="TaoPhieuNhapKho" title="Thêm">
+                            <i class="fas fa-plus"></i>
+                            Tạo phiếu đề nghị nhập hàng hóa
+                        </a>
+                    </div>
+                </div>
+                <h3 class="tile-title" style="text-align:center">SẢN PHẨM SẮP HẾT HÀNG</h3>
                 <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                        id="sampleTable">
                     <thead>
@@ -103,13 +102,14 @@
                             <th>Tên sản phẩm</th>
                             <th>Giá tiền</th>
                             <th>Đơn vị tính</th>
+                            <th>Số lượng</th>
                             <th>Tình trạng</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in dsctk)
                         {
-                            if(item.TinhTrang == "Sắp hết hàng")
+                            if (item.TinhTrang == "Sắp hết hàng")
                             {
                                 <tr>
                                     <td>
@@ -128,11 +128,13 @@
                                         @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
                                     </td>
                                     <td>
+                                        @Html.DisplayFor(modelItem => item.SoLuong)
+                                    </td>
+                                    <td>
                                         @Html.DisplayFor(modelItem => item.TinhTrang)
                                     </td>
                                 </tr>
                             }
-                            
                         }
                     </tbody>
                 </table>
@@ -180,16 +182,6 @@
     //   });
     // });
 
-    //In dữ liệu
-    var myApp = new function () {
-        this.printTable = function () {
-            var tab = document.getElementById('sampleTable');
-            var win = window.open('', '', 'height=700,width=700');
-            win.document.write(tab.outerHTML);
-            win.document.close();
-            win.print();
-        }
-    }
     //     //Sao chép dữ liệu
     //     var copyTextareaBtn = document.querySelector('.js-textareacopybtn');
 
@@ -213,4 +205,31 @@
         $("#ModalUP").modal({ backdrop: false, keyboard: false })
     });
 </script>
-
+<script>
+    //In dữ liệu
+    var myApp = new function () {
+        this.printTable = function () {
+            var tab = document.getElementById('sampleTable');
+            var tab1 = document.getElementById('sample1');
+            var win = window.open('', '', 'height=700,width=700');
+            win.document.write(tab1.outerHTML);
+            win.document.write(tab.outerHTML);
+            win.document.close();
+            win.print();
+        }
+    }
+</script>
+<!-- Essential javascripts for application to work-->
+<script src="~/Content/js/jquery-3.2.1.min.js"></script>
+<script src="~/Content/js/popper.min.js"></script>
+<script src="~/Content/js/bootstrap.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="src/jquery.table2excel.js"></script>
+<script src="~/Content/js/main.js"></script>
+<!-- The javascript plugin to display page loading on top-->
+<script src="~/Content/js/plugins/pace.min.js"></script>
+<!-- Page specific javascripts-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+<!-- Data table plugin-->
+<script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
