--- a/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
@@ -1,29 +1,31 @@
 ﻿@model Test02.Models.PhieuNhapXuat
-@using Test02.Models
+    @using Test02.Models;
 @{
-    ViewBag.Title = "TaoPhieuNhapKho";
+    ViewBag.Title = "ChiTietPhieuNhapKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.hh = "active";
-    ViewBag.Name = "Tạo phiếu đề nghị nhập kho";
+    ViewBag.Name = "Chi tiết phiếu đề nghị nhập kho";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var dsSP = db.SanPhams.ToList();
     var dsCTKho = db.ChiTietKhoes.ToList();
     List<string> distint = new List<string>();
 }
+
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
             <h2 style="text-align:center" id="sample1">PHIẾU ĐỀ NGHỊ NHẬP KHO</h2>
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="tile-body">
+            <form style="text-align:center">
+                <label for="date">Ngày:</label>
+                @Html.DisplayFor(model => model.NgayLap)<br>
+                <label for="date">Mã số:</label>
+                @Html.DisplayFor(model => model.MaPhieu)<br>
+            </form>
+            <div class="tile-body">
                 <form class="row">
                     <div class="form-group col-md-12" id="sample3">
                         <label class="control-label">- Kính gửi: </label>
-                        <input class="form-control" type="text" id="kinhgui" required>
-                    
+                        @Session["kinhgui"]
                     </div>
                     <div class="form-group col-md-12" id="sample4">
                         <label class="control-label">- Nhập vào các kho: </label> <br />
@@ -49,7 +51,7 @@
                     </div>
                     <div class="form-group col-md-12" id="sample5">
                         <label class="control-label">- Họ tên người làm phiếu:</label>
-                        <input class="form-control" type="text" id="hoten" required>
+                        @Session["hoten"]
                     </div>
                     <div class="form-group col-md-12" id="sample6">
                         <label class="control-label">- Sản phẩm cần nhập kho: </label>
@@ -96,59 +98,21 @@
                         </table>
                     </div>
                 </form>
-                <input type="submit" value="Lưu phiếu" class="btn btn-save" onclick="myApp.getvalue()" />
-                <a class="btn btn-cancel" href="QuanLyDL">Hủy bỏ</a>
-                <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
-                    <i class="fas fa-print"></i> In phiếu
-                </a>
             </div>
-            }
-
         </div>
     </div>
 </div>
 
-    
-    <script>
-        //In dữ liệu
-        var myApp = new function () {
-            this.printTable = function () {
-                var tab1 = document.getElementById('sample1');
-                var tab2 = document.getElementById('sample2');
-                var tab3 = document.getElementById('sample3');
-                var tab4 = document.getElementById('sample4');
-                var tab5 = document.getElementById('sample5');
-                var tab6 = document.getElementById('sample6');
-                var tab7 = document.getElementById('sample7');
-                var win = window.open('', '', 'height=700,width=700');
-                win.document.write(tab1.outerHTML);
-                win.document.write(tab2.outerHTML);
-                win.document.write(tab3.innerText);
-                win.document.write(tab4.outerHTML);
-                win.document.write(tab5.outerHTML);
-                win.document.write(tab6.outerHTML);
-                win.document.write(tab7.outerHTML);
-                win.document.close();
-                win.print();
-            }
-            this.getvalue = function () {
-                var text1 = document.ggetElementById('kinhgui');
-                var text2 = document.ggetElementById('hoten');
-                @Session["KinhGui"] = text1.getvalue;
-                @Session["HoTen"] = text2.getvalue;
-            }
-}
-    </script>
-    <!-- Essential javascripts for application to work-->
-    <script src="~/Content/js/jquery-3.2.1.min.js"></script>
-    <script src="~/Content/js/popper.min.js"></script>
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="src/jquery.table2excel.js"></script>
-    <script src="~/Content/js/main.js"></script>
-    <!-- The javascript plugin to display page loading on top-->
-    <script src="~/Content/js/plugins/pace.min.js"></script>
-    <!-- Page specific javascripts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
-    <!-- Data table plugin-->
-    <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+<p>
+    <a class="btn btn-actv btn-sm" href="/PhongKho/NhapKho" title="Trở lại">
+        <i class="fas fa-retweet"></i>
+        Trở lại
+    </a>
+    <a class="btn btn-danger btn-sm" href="/PhongKho/XoaPhieuNhapkho" title="Xóa">
+        <i class="fas fa-close"></i>
+        Xóa vĩnh viễn
+    </a>
+    <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+        <i class="fas fa-print"></i> In phiếu
+    </a>
+</p>
