--- a/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
+++ b/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Test02.Models.PhieuNhapXuat
 @using Test02.Models
 @{
     ViewBag.Title = "GiaiQuyetTonKho";
@@ -11,16 +11,16 @@
 }
 
 <div class="tile">
-    <div class="tile-body">
-        <h3 style="text-align:center">PHIẾU ĐỀ NGHỊ XUẤT KHO</h3>
-        <form style="text-align:center">
-            <label for="date">Ngày:</label>
-            <input type="date" id="clock" class="date" name="ngay"><br>
-        </form>
+    <h3 style="text-align:center">PHIẾU ĐỀ NGHỊ XUẤT KHO</h3>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="tile-body">
         <form class="row">
             <div class="form-group col-md-12">
                 <label class="control-label">Kính gửi: </label>
-                <input class="form-control" type="text">
+                <input class="form-control" type="text" required>
             </div>
             <div class="form-group col-md-12">
                 <label class="control-label">Xuất tại các kho: </label> <br />
@@ -59,7 +59,7 @@
                             <th style="text-align:center;">Giá tiền</th>
                             <th style="text-align:center;">Số lượng tồn</th>
                             <th style="text-align:center;">Đơn vị tính</th>
-                            
+
                         </tr>
                     </thead>
                     <tbody>
@@ -67,35 +67,71 @@
                         {
                             if (item.TinhTrang == "Tồn kho")
                             {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.MaKho)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.MaSP)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SanPham.TenSP)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SanPham.Gia)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SoLuong)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
-                            </td>
-                            
-                        </tr>
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaKho)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaSP)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SanPham.TenSP)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SanPham.Gia)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SoLuong)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
+                                    </td>
 
+                                </tr>
                             }
                         }
                     </tbody>
                 </table>
             </div>
         </form>
-        <button class="btn btn-save" type="button">Lưu và gửi</button>
+        <input type="submit" value="Lưu phiếu" class="btn btn-save" />
         <a class="btn btn-cancel" href="TonKho">Hủy bỏ</a>
-    </div>
+        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+            <i class="fas fa-print"></i> In phiếu
+        </a>
+
+        </div>
+    }
+    
 </div>
+
+<script>
+        //In dữ liệu
+        var myApp = new function () {
+            this.printTable = function () {
+                var tab1 = document.getElementById('sample1');
+                var tab2 = document.getElementById('sample2');
+                var tab3 = document.getElementById('sample3');
+                var tab4 = document.getElementById('sample4');
+                var tab5 = document.getElementById('sample5');
+                var tab6 = document.getElementById('sample6');
+                var tab7 = document.getElementById('sample7');
+                var win = window.open('', '', 'height=700,width=700');
+                win.document.write(tab1.outerHTML);
+                win.document.write(tab2.outerHTML);
+                win.document.write(tab3.innerText);
+                win.document.write(tab4.outerHTML);
+                win.document.write(tab5.outerHTML);
+                win.document.write(tab6.outerHTML);
+                win.document.write(tab7.outerHTML);
+                win.document.close();
+                win.print();
+            }
+            this.getvalue = function () {
+                var text1 = document.ggetElementById('kinhgui');
+                var text2 = document.ggetElementById('hoten');
+                @Session["KinhGui"] = text1.getvalue;
+                @Session["HoTen"] = text2.getvalue;
+            }
+}
+</script>
