--- a/Test02/Views/KinhDoanh/XoaDH.cshtml
+++ b/Test02/Views/KinhDoanh/XoaDH.cshtml
@@ -61,9 +61,7 @@
         </dd>
 
         <dt>
-            @{ var diemgiao = db.ChiTietDonHangs .Where(s => s.MaDH == Model.MaDH).FirstOrDefault();
-                }
-            @Html.DisplayNameFor(model => diemgiao.DiemGiao)
+            @Html.DisplayNameFor(model => model.DiemGiao)
         </dt>
 
         <dd>
