--- a/Test02/Views/KinhDoanh/BaoCao.cshtml
+++ b/Test02/Views/KinhDoanh/BaoCao.cshtml
@@ -75,23 +75,11 @@
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     @using (Html.BeginForm())
                     {
+                        @Html.HiddenFor(model => model.MaBC)
+                        @Html.HiddenFor(model => model.MaNV)
                         <div class="form-horizontal">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.MaBC, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.MaBC, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.MaBC, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
 
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.MaNV, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.MaNV, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
                             <div class="form-group">
                                 @Html.LabelFor(model => model.LoaiBC, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
